--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@
     padding:5px;
 }
 
-#gif-message{
+.gif-message{
     margin-top:300px;
     color:#D4e6f9;
 }
@@ -22,7 +22,7 @@
     border: #1B95E0 1px dotted;
     border-radius:3px;
     text-align: center;
-    height:800px;
+    min-height:800px;
 }
 
 
